# Frog-Engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
Examples/: app.rc  main.cpp
Include/FrSTD/: Allocator.h  Utility.h
Include/FrogEngine/: Allocator.h  FrogEngine.h  Icon.h  Log.h  Pointer.h  Save.h  Utility.h  Window.h
Source/: FrogEngine.cpp
Source/FrAllocator/: Allocator.cpp  Block.cpp  DynamicBlock.cpp  StaticBlock.cpp
Source/FrAllocator/OSWindows/: Allocator.cpp  Block.cpp
Source/FrLog/: Log.cpp
Source/FrSave/: Read.cpp  Save.cpp  Write.cpp
Source/FrSave/OSWindows/: Read.cpp  Save.cpp  Write.cpp
Source/FrWindow/OSWindows/: KeyInput.cpp  MouseInput.cpp  TextInput.cpp  Window.cpp
Source/FrWindow/Windows/: KeyInput.cpp  KeyMapping.h  MouseInput.cpp  TextInput.cpp  Window.cpp  Windows.cpp  Windows.h
